--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@400;500;600;700&family=Shadows+Into+Light&family=Tapestry&family=Ubuntu:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@400;500;600;700&family=Shadows+Into+Light&family=Tapestry&family=Ubuntu:wght@400;500;700&display=swap');
 
 * {
   margin: 0;
@@ -22,7 +22,7 @@ html {
   width: 100%;
   padding: 30px 0;
   z-index: 999;
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 
   transition: all 0.3s ease;
 }
@@ -94,12 +94,12 @@ html {
 /* home section */
 .home {
   display: flex;
-  background: url("images/banner.jpg") no-repeat center;
+  background: url('images/banner.jpg') no-repeat center;
   background: #111;
   height: 100vh;
   color: #fff;
   min-height: 500px;
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .home .max-width {
@@ -175,22 +175,22 @@ section .title {
   font-size: 40px;
   margin-bottom: 60px;
   padding-bottom: 20px;
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 .about {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 .service {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 .skills {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 .contact {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 .footer {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .about .about-content,
@@ -205,7 +205,7 @@ section .title {
 }
 
 section .title::before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0px;
   left: 50%;
@@ -231,7 +231,7 @@ section {
 }
 
 .about .title::after {
-  content: "Who i am";
+  content: 'Who i am';
 }
 
 .about .about-content .left {
@@ -353,7 +353,7 @@ section {
 }
 .service .title::after {
   background: #111;
-  content: "What i do";
+  content: 'What i do';
 }
 .service .service-content .card {
   width: calc(33% - 20px);
@@ -392,7 +392,7 @@ section {
 
 /* Skill section */
 .skills .title::after {
-  content: "what i know";
+  content: 'what i know';
 }
 
 .skills .skill-content .column {
@@ -443,7 +443,7 @@ section {
   position: relative;
 }
 .skills .skill-content .right .line::before {
-  content: "";
+  content: '';
   position: absolute;
   height: 100%;
   left: 0;
@@ -468,7 +468,7 @@ section {
 
 /* contact section styling */
 .contact .title::after {
-  content: "get in touch";
+  content: 'get in touch';
 }
 
 .contact .contact-content .column {
@@ -533,7 +533,7 @@ section {
   outline: none;
   padding: 0 15px;
   font-size: 17px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 .contact .right form .textarea textarea {
   padding-top: 10px;
@@ -597,7 +597,7 @@ footer span a:hover {
     z-index: 999;
   }
   .menu-btn i.active:before {
-    content: "\f00d";
+    content: '\f00d';
   }
 
   .navbar .menu {
